--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
         <meta name="Description" content="I am a budding programmer and chess player"><meta property="og:title" content="Mrunank&#39;s Blog" />
 <meta property="og:description" content="I am a budding programmer and chess player" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="http://fork52.github.io/" />
 
 <meta name="application-name" content="Mrunank&#39;s Blog">
 <meta name="apple-mobile-web-app-title" content="Mrunank&#39;s Blog"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://example.org/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Mrunank&#39;s Blog">
+        <link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="manifest" href="/site.webmanifest"><link rel="canonical" href="http://fork52.github.io/" /><link rel="alternate" href="/index.xml" type="application/rss+xml" title="Mrunank&#39;s Blog">
     <link rel="feed" href="/index.xml" type="application/rss+xml" title="Mrunank&#39;s Blog"><link rel="stylesheet" href="/lib/normalize/normalize.min.css"><link rel="stylesheet" href="/css/style.min.css"><link rel="stylesheet" href="/lib/animate/animate.min.css"><script type="application/ld+json">
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "http:\/\/example.org\/","inLanguage": "en","description": "I am a budding programmer and chess player","name": "Mrunank's Blog"
+        "url": "http:\/\/fork52.github.io\/","inLanguage": "en","description": "I am a budding programmer and chess player","name": "Mrunank's Blog"
     }
     </script></head>
     <body data-header-desktop="fixed" data-header-mobile="auto"><script>(window.localStorage && localStorage.getItem('theme') ? localStorage.getItem('theme') === 'dark' : ('dark' === 'auto' ? window.matchMedia('(prefers-color-scheme: dark)').matches : 'dark' === 'dark')) && document.body.setAttribute('theme', 'dark');</script>
